Final touch on html and css, assignment is completed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200;300;400;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Team ADA Assignment</title>
 </head>
@@ -17,18 +18,20 @@
         <div class="container-1">
             <div class="header">
                 <h2>Basic</h2>
-                <img src="" alt="Basic subscription image">
+                <img src="/assets/Pricing-Plans--Attractive--Basic-01.jpg" alt="Basic subscription image">
             </div>
             <div class="pricing">
                 <p class="money">&#36;10</p>
             </div>
+            <!--hr tags are used to make line below price-->
+            <hr class="green">
             <div class="description">
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quaerat ea, culpa dolorum architecto earum unde deserunt quisquam atque! Quasi vero.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-<!--Each button has two classes. First one will be used to give common features(shape, font-size, padding, margin); second one will be used to give different colors-->
+<!--Each button has different class to adjust colors-->
 
-                <button class="btn btn1">Start</button>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                <button class="btn1">Start</button>
+                <p>Already have an account? <a style="color: #618430;" href="#">Log in</a></p>
             </div>
         </div>
 
@@ -39,31 +42,33 @@
         <div class="container-2">
             <div class="header">
                 <h2>Pro</h2>
-                <img src="" alt="Pro subscription image">
+                <img src="/assets/Pricing-Plans--Attractive--Pro-02.jpg" alt="Pro subscription image">
             </div>
             <div class="pricing">
                 <p class="money">&#36;20</p>
             </div>
+            <hr class="blue">
             <div class="description">
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quaerat ea, culpa dolorum architecto earum unde deserunt quisquam atque! Quasi vero.</p>
-                <button class="btn btn2">Start</button>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <button class="btn2">Start</button>
+                <p>Already have an account? <a style="color: #3071ab;" href="#">Log in</a></p>
             </div>
         </div>
 
 <!--Start of Business Membership option-->
         <div class="container-3">
-            <div class="header">
+            <div class="header h3">
                 <h2>Business</h2>
-                <img src="" alt="Business subscription image">
+                <img src="/assets/Pricing-Plans--Attractive--Business-03.png" alt="Business subscription image">
             </div>
             <div class="pricing">
                 <p class="money">&#36;30</p>
             </div>
+            <hr class="red">
             <div class="description">
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quaerat ea, culpa dolorum architecto earum unde deserunt quisquam atque! Quasi vero.</p>
-                <button class="btn btn3">Start</button>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <button class="btn3">Start</button>
+                <p>Already have an account? <a style="color: #cd402f;" href="#">Log in</a></p>
             </div>
         </div>
 <!--That's it all html is done.-->
