Edit index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700;800&display=swap"
+        rel="stylesheet">
     <title>Team ADA Assignment</title>
 </head>
+
 <body>
-    
+    <main>
+        <section>
+            <!-- Basic plan -->
+            <article class="green">
+                <h2>Basic</h2>
+                <img src="./assets/Pricing-Plans--Attractive--Basic-01.jpg" alt="Basic Plan">
+                <h3>$10</h3>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida sagittis metus. </p>
+                <button>Start</button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </article>
+            <!-- Pro plan -->
+            <article class="blue">
+                <h2>Pro</h2>
+                <img src="./assets/Pricing-Plans--Attractive--Pro-02.jpg" alt="Pro Plan">
+                <h3>$20</h3>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida sagittis metus.</p>
+                <button>
+                    Start
+                </button>
+                <p>Already have an account?<a href="">Log in</a></p>
+            </article>
+            <!-- Business plan -->
+            <article class="orange">
+                <h2>Business</h2>
+                <img src="./assets/Pricing-Plans--Attractive--Business-03.png" alt="Business">
+                <h3>$30</h3>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida sagittis metus.
+                </p>
+                <button>Start</button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </article>
+        </section>
+    </main>
 </body>
+
 </html>
