--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<!--Main container is going to be flex parent-->
+<!--Main container-->
 
     <div id="main">
 
-<!--container-1 is first child: Basic Membership option, includes 3 boxes (divs)-->
+<!--Basic Membership option-->
 
         <div class="container-1">
             <div class="header">
@@ -28,16 +28,12 @@
             <div class="description">
                 <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-<!--Each button has different class to adjust colors-->
-
-                <button class="btn1">Start</button>
+                <button class="btn1">Start</button> /* btn1-btn2-btn3 to adjust colors*/
                 <p>Already have an account? <a style="color: #618430;" href="#">Log in</a></p>
             </div>
         </div>
-
-<!--This is the end of Basic subscription Plan, I'll copy and paste the code to create 2 more containers-->
-
-<!--This is start of Pro Membership option-->
+        
+<!--Pro Membership-->
 
         <div class="container-2">
             <div class="header">
@@ -55,7 +51,8 @@
             </div>
         </div>
 
-<!--Start of Business Membership option-->
+<!--Business Membership-->
+        
         <div class="container-3">
             <div class="header h3">
                 <h2>Business</h2>
@@ -71,7 +68,6 @@
                 <p>Already have an account? <a style="color: #cd402f;" href="#">Log in</a></p>
             </div>
         </div>
-<!--That's it all html is done.-->
     </div>
 </body>
 </html>
