Comment fixed according to #6
CSS comment on line 31 replaced by html comment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="description">
                 <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-                <button class="btn1">Start</button> /* btn1-btn2-btn3 to adjust colors*/
+                <button class="btn1">Start</button> <!--btn1/btn2/btn3 to adjust colors-->
                 <p>Already have an account? <a style="color: #618430;" href="#">Log in</a></p>
             </div>
         </div>
