Fix file formatting according to #2

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200;300;400;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Team ADA Assignment</title>
 </head>
+
 <body>
 
-<!--Main container-->
+    <!--Main container-->
 
     <div id="main">
 
-<!--Basic Membership option-->
+        <!--Basic Membership option-->
 
         <div class="container-1">
             <div class="header">
@@ -28,12 +30,13 @@
             <div class="description">
                 <p>Duis aute irure dolor in reprehenderit in voluptte velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-                <button class="btn1">Start</button> <!--btn1/btn2/btn3 to adjust colors-->
+                <button class="btn1">Start</button>
+                <!--btn1/btn2/btn3 to adjust colors-->
                 <p>Already have an account? <a style="color: #618430;" href="#">Log in</a></p>
             </div>
         </div>
-        
-<!--Pro Membership-->
+
+        <!--Pro Membership-->
 
         <div class="container-2">
             <div class="header">
@@ -51,8 +54,8 @@
             </div>
         </div>
 
-<!--Business Membership-->
-        
+        <!--Business Membership-->
+
         <div class="container-3">
             <div class="header h3">
                 <h2>Business</h2>
@@ -70,4 +73,5 @@
         </div>
     </div>
 </body>
+
 </html>
